@@ -1,4 +1,5 @@
 Development
+	Disable screenshot menu when hardware codec are used with xvmc or vdpau
 	Add ability to specify mplayer binary on command line
 	Fix problem with screenshot being done twice in mplayer2 GMTK Issue #14
 	Updated Korean translation
